:sparkles: Add stealable UUID wallets opened by right-click
Wallets persist cash as JSON, show the total in lore, lock the held slot while open, and mint a fresh UUID on each (non-shift) craft.

Co-authored-by: Stanislas Castaybert <perso@stan1712.com>